[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pygtrans"
authors = [
    { name = "foyoux" },
]
description = "Google Translate, support APIKEY"
keywords = ["pygtrans", "google", "translate", "apikey", "text", "html", "google.cn", "google.com"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Natural Language :: Chinese (Simplified)",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version", "dependencies"]


[project.urls]
"Source" = "https://github.com/foyoux/pygtrans"
"Homepage" = "https://github.com/foyoux/pygtrans"
"Bug Tracker" = "https://github.com/foyoux/pygtrans/issues"
"Documentation" = "https://pygtrans.readthedocs.io/zh_CN/latest/"


[project.scripts]
pygtrans = "pygtrans:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = { attr = "pygtrans.__version__" }
dependencies = { file = "requirements.txt" }


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
