[metadata]
name = pygtrans
version = attr: pygtrans.__version__
author = foyou
author_email = yimi.0822@qq.com
description = Google Translate, support APIKEY
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/foyoux/Google-Translate
project_urls =
    Documentation = https://google-translate.readthedocs.io/zh_CN/latest/index.html
    Source = https://github.com/foyoux/Google-Translate/
    Bug Tracker = https://github.com/foyoux/Google-Translate/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: Chinese (Simplified)
    Development Status :: 5 - Production/Stable
keywords = google translate apikey text html google.cn google.com
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7.*
install_requires =
    requests
[options.packages.find]
where = .
exclude =
    tests