[metadata]
name = pygtrans
version = attr: pygtrans.__version__
author = foyou
author_email = yimi.0822@qq.com
description = Google Translate, support APIKEY
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/foyoux/pygtrans
project_urls =
    Documentation = https://pygtrans.readthedocs.io/zh_CN/latest/
    Source = https://github.com/foyoux/pygtrans
    Bug Tracker = https://github.com/foyoux/pygtrans/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 5 - Production/Stable
keywords = google translate apikey text html google.cn google.com
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6.*
install_requires =
    requests[socks]
[options.packages.find]
where = .
exclude =
    tests